# nhsdigital.eligibility-signposting-api

./: pyproject.toml
infrastructure/stacks/api-gateway-layer/: api_gateway.tf  data.tf  default_variables.tf  locals.tf  patient_check.tf  provider.tf  shared_locals.tf  state.tf  variables.tf
infrastructure/stacks/api-gateway-layer/backends/: dev.api-gateway-layer.tfbackend  preprod.api-gateway-layer.tfbackend  prod.api-gateway-layer.tfbackend  test.api-layer.tfbackend
src/eligibility_signposting_api/model/: campaign_config.py
tests/fixtures/builders/model/: rule.py
tests/unit/services/calculators/: test_eligibility_calculator.py
