[project]
name = "eligibility-signposting-api"
version = "0.0.1-alpha"
description = "TODO"
authors = [
  #TODO add authors
]
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["classifiers", "dependencies"]
repository = "https://github.com/NHSDigital/eligibility-signposting-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue"
keywords = ["healthcare", "uk", "nhs", "vaccination", "api"] #TODO add additional keywords

[tool.poetry]
packages = [{include = "eligibility_signposting_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"
flask = {extras = ["async"], version = "^3.1.1"}
httpx = "^0.28.1"
yarl = "^1.18.3"
pydantic = "^2.12.3"
asgiref = "^3.9.1"
eval-type-backport = "^0.2.2"
mangum = "^0.19.0"
wireup = "^2.1.0"
python-json-logger = "^3.3.0"
python-dateutil = "^2.9.0"
pyhamcrest = "^2.1.0"
boto3 = "^1.40.57"
botocore = "^1.40.57"
aws-xray-sdk = "2.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.4"
gitpython = "^3.1.45"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-nhsd-apim = "^5.0.14"
aiohttp = "^3.12.15"
awscli = "^1.37.24"
awscli-local = "^0.22.0"
polyfactory = "^2.22.2"
pyright = "^1.1.407"
brunns-matchers = "^2.9.0"
localstack = "^4.8.1"
pytest-docker = "^3.2.3"
stamina = "^25.1.0"
pytest-freezer = "^0.4.9"
moto = "^5.1.13"
requests = "^2.32.5"
jsonschema = "^4.25.1"
behave = "^1.3.3"
python-dotenv = "^1.1.1"
openapi-spec-validator = "^0.7.2"
pip-licenses = "^5.0.0"


[tool.poetry-plugin-lambda-build]
docker-image = "public.ecr.aws/sam/build-python3.13:1.139-x86_64"  # See https://gallery.ecr.aws/search?searchTerm=%22python%22&architecture=x86-64&popularRegistries=amazon&verified=verified&operatingSystems=Linux
docker-network = "host"
docker-platform = "linux/x86_64"
package-artifact-path = "dist/lambda.zip"
without = "dev"

[tool.poetry.scripts]
clean-lambda = "scripts.lambda.clean_lambda:main"

[tool.ruff]
line-length = 120
exclude = ["docs/", "scripts/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D"]

[tool.ruff.lint.per-file-ignores]
"src/eligibility_signposting_api/repos/*" = ["ANN401"]
"tests/*" = ["ANN", "INP", "S101", "S106", "S311"]

[tool.pyright]
include = ["src/"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
relative_files = true
branch = true
source = ["src", "sandbox"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
